<resources>
    <string name="app_name">EQual</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">-------</string>
    <string name="settings_default_username">Валерий Жмышенко</string>
    <string name="settings_default_status">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">88005553535</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">Валерий Жмышенко</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="settings_hint_name">Имя</string>
    <string name="settings_hint_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
</resources>
