<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_user_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginLeft="16dp"
        android:src="@drawable/defolt_photo"
        app:civ_border_color="#FF000000"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        tools:text="@string/settings_default_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/settings_user_photo"
        android:layout_marginTop="@dimen/vertical_margin"
        android:textSize="@dimen/normalText"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        tools:text="@string/settings_default_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_username"
        android:textSize="@dimen/smallText"
        android:layout_marginStart="@dimen/horizontal_margin"
        app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
        android:layout_marginLeft="16dp" />



    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block"
        android:text="@string/settings_text_account"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/horizontal_margin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_phone_number"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/settings_default_number"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_label_phone_number"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separatpr" />








    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_login"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_login"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/settings_default_login"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_label_login"
            app:layout_constraintTop_toBottomOf="@id/settings_login"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_label_login"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separatpr" />








    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:background="@color/colorAccent"
        android:src="@drawable/change_photo"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:civ_border_color="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block"
        android:layout_marginRight="@dimen/horizontal_margin" />


</androidx.constraintlayout.widget.ConstraintLayout>